# 4over6

./: README.md
docs/: report.md
key/: android.keystore  key.jks
v4o6/: settings.gradle
v4o6/app/: build.gradle
v4o6/app/release/: app-release.apk
v4o6/app/src/androidTest/java/com/yangyr17/v4o6/: ExampleInstrumentedTest.java
v4o6/app/src/main/: AndroidManifest.xml
v4o6/app/src/main/java/: .createh.bat.un~  createh.bat  createh.bat~
v4o6/app/src/main/java/com/yangyr17/v4o6/: BackendHandler.java  BackendRunnable.java  Constants.java  DebugHandler.java  DebugRunnable.java  JNIUtils.java  MainActivity.java  Msg.java  MyVpnService.java  Utils.java  WorkHandler.java  WorkRunnable.java
v4o6/app/src/main/jni/: .backend.cpp.un~  Android.mk  backend.cpp  com_yangyr17_v4o6_JNIUtils.h  main.c  main.cpp  message.h  utils.cpp
v4o6/app/src/main/res/layout/: activity_main.xml
v4o6/app/src/main/res/values/: strings.xml
v4o6/app/src/test/java/com/yangyr17/v4o6/: ExampleUnitTest.java
v4o6/gradle/wrapper/: gradle-wrapper.properties
v6backend/: CMakeLists.txt  README.md  backend.cpp  build.sh  main.cpp  run.sh  utils.cpp
