CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(V6BACKEND)

add_compile_options(-g)
# add_compile_options(-O2)
# add_compile_options(-Wall -Wconversion -Wextra)

SET(V6BACKEND_SOURCES
        main.cpp
    )

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

ADD_EXECUTABLE(${PROJECT_NAME} ${V6BACKEND_SOURCES})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include)
target_link_libraries(V6BACKEND pthread)